fix aphorism alignment

--- a/css/home.css
+++ b/css/home.css
@@ -53,7 +53,8 @@
 
 .aphorism {
   position: relative;
-  margin: 10px;
+  margin: 1.5rem;
+  align-self: flex-start;
 }
 
 .pagination {
